syntax = "proto3";
package pb;

option go_package = "../pb";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (SimpleRequest) returns (SimpleReply) {}
}

// The request message containing the user's name.
message SimpleRequest {
  string name = 1;
}

// The response message containing the greetings
message SimpleReply {
  string message = 1;
}